5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_1800.log
== TEST (2019-04-06 21:58:37) 
-- CODE:
a+b+c=1+2+3
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    a+b+c=1+2+3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 21:59:15) 
-- CODE:
a+b+c=6
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    a+b+c=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:01:18) 
-- CODE:
a+b+c
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:01:55) 
-- CODE:
a+b+c=6
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
File "XXXX", line 1
    a+b+c=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:02:32) 
-- CODE:
a+b+c=6
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- EXECUTION TIME:
0.202624
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 1
    a+b+c=6
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:02:49) 
-- CODE:
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x, 1))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:03:10) 
-- CODE:
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- EXECUTION TIME:
0.161538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 1, in <module>
    print(round(x, 1))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:03:39) 
-- CODE:
a+b+c=1+2+3
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
File "XXXX", line 1
    a+b+c=1+2+3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:04:16) 
-- CODE:
a+b+c=1+2+3
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
File "XXXX", line 1
    a+b+c=1+2+3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:05:46) 
-- CODE:
a+b+c=1+2+3
print(round(x, 1))
print(round(x, 2))
print(round(x, 3))
-- ERROR:
File "XXXX", line 1
    a+b+c=1+2+3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:06:45) 
-- CODE:
a+b+c=1+2+3
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    a+b+c=1+2+3
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:32:50) 
-- CODE:
print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:33:25) 
-- CODE:
print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:39:58) 
-- CODE:
a=1
b=2
c=3
print(round(x, 7)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:40:25) 
-- CODE:
a=1
b=2
c=3
print(round(x, n)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:41:15) 
-- CODE:
a=1
b=2
c=3
print(round(a+b+c, 7)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:51:01) 
-- CODE:
a=1
b=2
c=3
a+b+c
print(round(x, 7)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:51:41) 
-- CODE:
a=1
b=2
c=3
a+b+c
print(round(6, 7)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:27:00) 
-- CODE:
var=a+b+c
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:30:16) 
-- CODE:
a**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:31:20) 
-- CODE:
a**2+b**2+c**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2+b**2+c**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:31:49) 
-- CODE:
a**2+b**2+c**2/a+b+c
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2+b**2+c**2/a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:34:09) 
-- CODE:
a**2
print(round(x, 7))
b**2
print(round(x, 7))
c**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:34:51) 
-- CODE:
a+b+c
print(round(x, 7))
b**2
print(round(x, 7))
c**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:37:51) 
-- CODE:
print(round(x, 7)
a**2
-- ERROR:
File "XXXX", line 2
    a**2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:39:57) 
-- CODE:
a**2
print(round(a, 7))
b**2
print(round(b, 7))
c**2
print(round(c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:42:04) 
-- CODE:
print(round(a, 7))
a**2
print(round(b, 7))
b**2
print(round(c, 7))
c**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(a, 7))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:53:17) 
-- CODE:
a
b
c
print(round(a**2, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:53:44) 
-- CODE:
print(round(a**2, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(a**2, 7))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:54:07) 
-- CODE:
a**2
print(round(a**2, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:04:51) 
-- CODE:
a**2
print(round(x, 7))
b**2
print(round(x, 7))
c**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:00) 
-- CODE:
a=1**2
print(round(x, 7))
b=2**2
print(round(x, 7))
c=3**2
print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 7))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:24) 
-- CODE:
a=1**2
print(round(a, 7))
b=2**2
print(round(b, 7))
c=3**2
print(round(c, 7))
-- OUTPUT:
1
4
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:11:34) 
-- CODE:
a=1**2
print(round(a, 7))
b=2**2
print(round(b, 7))
c=3**2
print(round(c, 7))
-- EXECUTION TIME:
0.181134
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1
4
9
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
1
4
9
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1
4
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:52) 
-- CODE:
a=1**2
print(round(a, 7))
b=2**2
print(round(b, 7))
c=3**2
print(round(c, 7))
-- OUTPUT:
1
4
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:44:27) 
-- CODE:
var=a**2
print(round(a, 7))
var=b**2
print(round(b, 7))
var=c**2
print(round(c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:45:16) 
-- CODE:
a**2+b**2+c**2
print(round(a, 7))
print(round(b, 7))
print(round(c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2+b**2+c**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:45:55) 
-- CODE:
a**2
b**2
c**2
a**2+b**2+c**2
print(round(a, 7))
print(round(b, 7))
print(round(c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:33) 
-- CODE:
a**2
print(input(round(a, 7)))
b**2
print(input(round(b, 7)))
c**2
print(input(round(c, 7)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:07) 
-- CODE:
a**2
print(round(a, 7))
b**2
print(round(b, 7))
c**2
print(round(c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:24:11) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
v=(a**2 + b**2 + c**2)/ a+b+c
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:26:11) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
v=((a**2) + (b**2) + (c**2))/ a+b+c
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:26:33) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
v=((a**2) + (b**2) + (c**2))/ a+b+c
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:29:14) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a+b+c!=0
v=((a**2) + (b**2) + (c**2))/ a+b+c
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 14:53:42) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a+b+c!=0
v=(((a**2) + (b**2) + (c**2))/ a+b+c)
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:02:31) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a+b+c!=0
v=(((a**2) + (b**2) + (c**2))/ a + b + c)
print(round(v, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:06:23) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a+b+c!=0
v=(((a**2) + (b**2) + (c**2))/ (a + b + c))
print(round(v, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:06:32) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a+b+c!=0
v=(((a**2) + (b**2) + (c**2))/ (a + b + c))
print(round(v, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:12:47) 
-- CODE:
a=int(input("Digite o valor de a: "))
b=int(input("Digite o valor de b: "))
c=int(input("Digite o valor de c: "))
a!=0
b!=0
c!=0
v=(((a**2) + (b**2) + (c**2))/ (a + b + c))
print(round(v, 7))

-- EXECUTION TIME:
0.148376
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
